--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,10 +16,10 @@ build:
 
 requirements:
   host:
-    - python >=3.7
-    - pip2
+    - python >=3.6
+    - pip
   run:
-    - python >=3.7
+    - python >=3.6
     - pytz
     - requests
 
