--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,10 +16,10 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
   run:
-    - python
+    - python >=3.6
     - pytz
     - requests
 
@@ -43,3 +43,4 @@ about:
 extra:
   recipe-maintainers:
     - hajapy
+    - jan-janssen
