--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
 
 requirements:
@@ -22,7 +22,7 @@ requirements:
   run:
     - python >=3.6
     - pytz
-    - requests
+    - dataclasses
 
 test:
   imports:
