--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,7 @@ source:
   sha256: 8fd917102529cde70a8ecde7b1e1b7831a80f640b851ead2a298e07bae0e1cfe
 
 build:
-  noarch: python
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
 
 requirements:
@@ -21,12 +20,14 @@ requirements:
     - poetry
   run:
     - python >=3.6
-    - pytz
+    - backports.zoneinfo  # [py<39]
     - dataclasses
 
 test:
   imports:
     - astral
+  commands:
+    - pip check
 
 
 about:
