--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: 8fd917102529cde70a8ecde7b1e1b7831a80f640b851ead2a298e07bae0e1cfe
 
 build:
+  noarch: python
   number: 1
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
 
@@ -20,7 +21,7 @@ requirements:
     - poetry
   run:
     - python >=3.6
-    - backports.zoneinfo  # [py<39]
+    - backports.zoneinfo
     - dataclasses
 
 test:
