--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,13 +23,13 @@ requirements:
     - python
     - dataclasses  # [py<37]
     - backports.zoneinfo  # [py<39]
-    - tzdata
+    - tzdata  # [not win]
 
 test:
   imports:
     - astral
   commands:
-    - pip check
+    - pip check  # [not win]
   requires:
     - pip
 
