--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ requirements:
   host:
     - python
     - pip
-    - poetry
+    - poetry-core
   run:
     - python
     - dataclasses  # [py<37]
